Fix image responsive design and horizontal scroll on categories page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,6 +32,7 @@ input[type="submit"],input[type="reset"],.w3layouts_banner_info_right ul li a,.w
 	color:black !important;
 }
 
+
 /* Search banner */
 .search_banner{
 	position: absolute;
@@ -994,6 +995,10 @@ a.w3_agile_vimeo:hover{
 		min-height: 260px;
 		padding: 4em 0 0;
 	}
+	.newsImage{
+		display:none;
+	}
+
 }
 @media (max-width: 991px){
 	.navbar-nav > li > a {
